Test_Files/abstract_vm/Error/ope1.asm
;     Ope 1
;   =============
;   Error test 16

push int8(80)
add
sub
mul
div
mod
dump
pop
add
sub
mul
div
mod
dump 
push int8(80)
push double(18.45)
pop
dump
add
sub
mul
div
mod
pop
dump
push float(15.876)
push double(0.000000000000000000000000000000000000000000001)
dump

exit
